--- a/app/views/pages/book_verse.html.erb
+++ b/app/views/pages/book_verse.html.erb
@@ -5,9 +5,8 @@
 		<ul class="nav pull-right">
 			打開讀經新頁面： 
 			
-				<a href="http://localhost:3000/book_verse" target="_blank"><font color="#FF0000">書卷讀經</font></a> | 
-				<a href="http://localhost:3000/topic_verse" target="_blank"><font color="#FF0000">主題讀經</font></a>
-			
+				<%= link_to  "書卷讀經", book_verse_path %> | 
+				<%= link_to  "主題讀經", topic_verse_path %> | 過去閲讀
 		</ul>
 	</div>
 
@@ -129,168 +128,181 @@
 
 	        <tbody>
 	          <tr>
-	            <td><span class="badge badge-success">1</span></td>
+	            <td><span class="badge badge-success">1:1-1:18</span></td>
 	            <td><a href="#"><font color="#000000">道成肉身</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">2</span></td>
+	            <td><span class="badge badge-success">1:19-1:28</span></td>
 	            <td><a href="#"><font color="#000000">施洗約翰傳道</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">3</span></td>
+	            <td><span class="badge badge-success">1:29-1:34</span></td>
 	            <td><a href="#"><font color="#000000">耶穌受洗</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">4</span></td>
+	            <td><span class="badge badge-success">1:35-1:51</span></td>
 	            <td><a href="#"><font color="#000000">初召門徒</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">5</span></td>
+	            <td><span class="badge badge-success">2:1-2:12</span></td>
 	            <td><a href="#"><font color="#000000">迦拿的婚宴</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">6</span></td>
+	            <td><span class="badge badge-success">2:13-2:25</span></td>
 	            <td><a href="#"><font color="#000000">洁净圣殿</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">7</span></td>
+	            <td><span class="badge badge-success">3:1-3:21</span></td>
 	            <td><a href="#"><font color="#000000">与尼哥底母谈道</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">8</span></td>
+	            <td><span class="badge badge-success">3:22-3:36</span></td>
 	            <td><a href="#"><font color="#000000">约旦河边替人施洗</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">9</span></td>
-	            <td><a href="#"><font color="#000000">撒玛利亚井边妇人谈道</font></a></td>
+	            <td><span class="badge badge-success">4:1-4:42</span></td>
+	            <td><a href="#"><font color="#000000">撒玛利亚井边谈道</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">10</span></td>
+	            <td><span class="badge badge-success">4:43-4:45</span></td>
 	            <td><a href="#"><font color="#000000">施洗约翰下监</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">11</span></td>
-	            <td><a href="#"><font color="#000000">洁净圣殿</font></a></td>
-	          </tr>
-	          <tr>
-	            <td><span class="badge badge-success">12</span></td>
+	            <td><span class="badge badge-success">4:46-4:54</span></td>
 	            <td><a href="#"><font color="#000000">医治大臣的儿子</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">13</span></td>
-	            <td><a href="#"><font color="#000000">被拿撒勒乡亲拒绝</font></a></td>
-	          </tr>
-	          <tr>
-	            <td><span class="badge badge-success">14</span></td>
+	            <td><span class="badge badge-success">5:1-5:18</span></td>
 	            <td><a href="#"><font color="#000000">医治38年的摊子</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">15</span></td>
+	            <td><span class="badge badge-success">5:19-5:47</span></td>
 	            <td><a href="#"><font color="#000000">逾越节圣殿讲道</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">16</span></td>
+	            <td><span class="badge badge-success">6:1-6:15</span></td>
 	            <td><a href="#"><font color="#000000">五饼二鱼</font></a></td>
 	          </tr>
 	          <tr>
-	            <td><span class="badge badge-success">17</span></td>
+	            <td><span class="badge badge-success">6:16-6:21</span></td>
 	            <td><a href="#"><font color="#000000">海面行走</font></a></td>
 	          </tr>
 	          <tr>
-	          <tr>
-	            <td><span class="badge badge-success">18</span></td>
+	            <td><span class="badge badge-success">6:22-6:71</span></td>
 	            <td><a href="#"><font color="#000000">耶穌是生命的糧</font></a></td>
 	          </tr>
 	          <tr>
-	          	<td><span class="badge badge-success">19</span></td>
+	          	<td><span class="badge badge-success">7:1-7:52</span></td>
 	            <td><a href="#"><font color="#000000">活水的江河</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">20</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">8:1-8:11</span></td>
 	            <td><a href="#"><font color="#000000">行淫的妇人</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">21</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">8:12-8:30</span></td>
 	            <td><a href="#"><font color="#000000">生命的光</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">22</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">8:31-8:47</span></td>
 	            <td><a href="#"><font color="#000000">真理使人自由</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">23</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">8:48-8:59</span></td>
 	            <td><a href="#"><font color="#000000">只求天父的荣耀</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">24</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">9:1-9:33</span></td>
 	            <td><a href="#"><font color="#000000">治好生來瞎眼的</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">25</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">9:34-9:41</span></td>
 	            <td><a href="#"><font color="#000000">靈裏的眼瞎</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">26</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">10:1-10:21</span></td>
 	            <td><a href="#"><font color="#000000">好牧人</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">27</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">10:22-10:42</span></td>
 	            <td><a href="#"><font color="#000000">耶穌與父合為一</font></a></td>
 	          </tr>
-	          <td><span class="badge badge-success">28</span></td>
+	          <tr>
+	          <td><span class="badge badge-success">11:1-11:54</span></td>
 	            <td><a href="#"><font color="#000000">拉撒路復活</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">29</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">12:1-12:11</span></td>
 	            <td><a href="#"><font color="#000000">瑪麗亞香膏抹主</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">30</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">12:12-12:19</span></td>
 	            <td><a href="#"><font color="#000000">耶穌榮耀進城</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">31</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">12:20-12:36</span></td>
 	            <td><a href="#"><font color="#000000">得榮耀的時候到了</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">32</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">12:37-12:50</span></td>
 	            <td><a href="#"><font color="#000000">不信的將受審判</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">33</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">13:1-13:20</span></td>
 	            <td><a href="#"><font color="#000000">為門徒洗腳</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">34</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">13:21-13:30</span></td>
 	            <td><a href="#"><font color="#000000">預言猶大出賣</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">35</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">13:31-13:35</span></td>
 	            <td><a href="#"><font color="#000000">愛的命令</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">36</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">13:36-13:38</span></td>
 	            <td><a href="#"><font color="#000000">預言彼得三次不認主</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">37</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">14:1-14:14</span></td>
 	            <td><a href="#"><font color="#000000">耶穌是道路真理生命</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">38</span></td>
-	            <td><a href="#"><font color="#000000">將差遣聖靈寳惠師</font></a></td>
+	          <tr>
+	          	<td><span class="badge badge-success">14:15-14:31</span></td>
+	            <td><a href="#"><font color="#000000">聖靈寳惠師要來</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">39</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">15:1-15:17</span></td>
 	            <td><a href="#"><font color="#000000">耶穌是真葡萄樹</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">40</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">15:18-16:33</span></td>
+	            <td><a href="#"><font color="#000000">聖靈的工作</font></a></td>
+	          </tr>
+	          <tr>
+	          	<td><span class="badge badge-success">17:1-17:26</span></td>
 	            <td><a href="#"><font color="#000000">為門徒禱告</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">41</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">18:1-18:40</span></td>
 	            <td><a href="#"><font color="#000000">被抓受審</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">28</span></td>
-	            <td><a href="#"><font color="#000000">彼得三次不認主</font></a></td>
-	          </tr>
-	          	<td><span class="badge badge-success">42</span></td>
-	            <td><a href="#"><font color="#000000">彼拉多</font></a></td>
-	          </tr>
-	          	<td><span class="badge badge-success">43</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">19:1-19:30</span></td>
 	            <td><a href="#"><font color="#000000">被釘十字架</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">44</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">9:31-19:42</span></td>
 	            <td><a href="#"><font color="#000000">安葬</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">45</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">20:1-20:29</span></td>
 	            <td><a href="#"><font color="#000000">復活</font></a></td>
 	          </tr>
-	          	<td><span class="badge badge-success">46</span></td>
+	          <tr>
+	          	<td><span class="badge badge-success">21:1-21:23</span></td>
 	            <td><a href="#"><font color="#000000">你愛我嗎</font></a></td>
 	          </tr>
-
-
 	        </tbody>
 	      </table>
 
@@ -334,10 +346,6 @@
 				   		<span class="badge badge-success">馬太14:13-14:21</span> 
 							<span class="badge badge-success">馬可6:30-6:34</span> 
 							<span class="badge badge-success">路加9:10-9:17</span>
-
-							<p></p>
-							<button type="button" class="btn btn-mini btn-primary">記住本段讀經
-					</button> 
 				   	</div>
 
 				  </div>
@@ -465,6 +473,9 @@
 	        衆人看出耶穌是彌賽亞。但他們對耶穌的期望還停留在地上的國，只希望耶穌做他們地上的王。耶穌當然拒絕，因爲耶穌他降世的目的是要拯救世人脫離罪，做全人類的救主。</p>
 
 	  			<div align="middle">
+	  				<p></p>
+						<button type="button" class="btn btn-primary"><i class="icon-file icon-white"></i>記住本段讀經
+						</button> 
 	  				<a class="btn btn-primary" href="#"><i class="icon-star icon-white"></i>按此完成本段閲讀</a>
 	  			</div>
 	  		</div>
