--- a/app/views/pages/topic_verse.html.erb
+++ b/app/views/pages/topic_verse.html.erb
@@ -1,22 +1,18 @@
 
 	<div class="container-fluid">
 
-	<div class="row-fluid">
+		<div class="row-fluid">
 
-		<ul class="nav pull-right">
-			打開讀經新頁面： 
-			
-				<a href="http://localhost:3000/book_verse" target="_blank"><font color="#FF0000">書卷讀經</font></a> | 
-				<a href="http://localhost:3000/topic_verse" target="_blank"><font color="#FF0000">主題讀經</font></a>
-			
-		</ul>
-	</div>
+			<ul class="nav pull-right">
+				打開讀經新頁面： 
+				
+				<%= link_to  "書卷讀經", book_verse_path %> | 
+				<%= link_to  "主題讀經", topic_verse_path %> | 過去閲讀
+				
+			</ul>
+		</div>
 
-		 
-
-
-
-	<div class="row-fluid">
+		<div class="row-fluid">
 			<div class="span3">
 				主題 <span class="badge badge-warning">9</span><h3>道成肉身</h3> 
 			</div>
@@ -607,6 +603,8 @@
 	        衆人看出耶穌是彌賽亞。但他們對耶穌的期望還停留在地上的國，只希望耶穌做他們地上的王。耶穌當然拒絕，因爲耶穌他降世的目的是要拯救世人脫離罪，做全人類的救主。</p>
 
 	  			<div align="middle">
+	  				<button type="button" class="btn btn-primary"><i class="icon-file icon-white"></i>記住本段讀經
+						</button> 
 	  				<a class="btn btn-primary" href="#"><i class="icon-star icon-white"></i>按此完成本段閲讀</a>
 	  			</div>
 	  		</div>
