--- a/app/views/pages/topic_verse.html.erb
+++ b/app/views/pages/topic_verse.html.erb
@@ -4,12 +4,17 @@
 		<div class="row-fluid">
 
 			<ul class="nav pull-right">
-				打開讀經新頁面： 
-				
+				<font color="#FF0000">打開讀經新頁面： </font>
+			
 				<%= link_to  "書卷讀經", book_verse_path %> | 
-				<%= link_to  "主題讀經", topic_verse_path %> | 過去閲讀
+				<%= link_to  "主題讀經", topic_verse_path %>
+
+				&nbsp;&nbsp;&nbsp; <font color="#FF0000">閲讀歷史： </font>
 				
+				<%= link_to  "往前", "#" %> | 
+				<%= link_to  "往後", "#" %>
 			</ul>
+
 		</div>
 
 		<div class="row-fluid">
